# Graphics

./: .gitignore  0.grf  Accumulation.cpp  Accumulation.h  CMakeLists.txt  Graphics.pri  Graphics.pro  Graphics.pro.user.20  Graphics.pro.user.4.8-pre1  Graphics.pro.user.8399ff1  Graphics.pro.user.8399ff1.4.8-pre1  Graphics.pro.user.902a637  Graphics.pro.user.902a637.20  Graphics.pro.user.Rj2481  Graphics.pro.user.f247215  Graphics.pro.user.f247215.20  Graphics.pro.user.fd5af79  Graphics.rc  Graphics.sln  Graphics.vcxproj  Graphics.vcxproj.filters  Orion_Accumulation.cpp  Orion_Accumulation.h  Sapr.h  Sapr.inl  Sapr_Accumulation.cpp  Sapr_Accumulation.h  SystemDynamic.h  TRF_Accumulation.cpp  TRF_Accumulation.h  blending.xlsx  example.bat  glad.c  glad.cpp  graphics.qrc  graphicsdoc.cpp  graphicsdoc.h  graphicsdoc.ui  graphicsview.cpp  graphicsview.h  (+5 more)
Dialogs/: PageSetup.ui  colorbutton.cpp  colorbutton.h  gaxe_dialog.cpp  gaxe_dialog.h  gaxe_dialog.ui  graphSettings.cpp  graphSettings.h  graphSettings.ui  graphselect.cpp  graphselect.h  graphselect.ui  locator_item.cpp  locator_item.h  locator_model.cpp  locator_model.h  locator_view.cpp  locator_view.h  pageSetup.cpp  pageSetup.h  panelselect.cpp  panelselect.h  panelselect.ui  qgridtree.cpp  qgridtree.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
GeneratedFiles/: qrc_graphics.cpp  ui_PageSetup.h  ui_gaxe_dialog.h  ui_graphSettings.h  ui_graphicsdoc.h  ui_graphselect.h  ui_panelselect.h
Graph/: GAxe.cpp  GAxe.h  GAxeArg.cpp  GAxeArg.h  GText.cpp  GText.h  GTextLabel.cpp  GTextLabel.h  GraphObject.cpp  GraphObject.h
Resources/fonts/: arial.xml  arialN.xml  arial_new.xml  arial_s.xml  arialn.xml  courier.xml  fonts.rar
Resources/fonts/arialN/: arialN_48.rar  arialN_96.rar  example.bat
include/glad/: glad.h
shaders/: fbo.frag  fbo.vert  gaxe.frag  gaxe.geom  gaxe.vert  gaxe_cross.frag  gaxe_cross.vert  gaxe_data.frag  gaxe_data.geom  gaxe_data.vert  gaxe_data_bool.geom  gaxe_data_triangles.geom  gaxe_selection.frag  gaxe_selection.vert  gaxearg.frag  gaxearg.vert  markers.frag  markers.vert  simple.frag  simple.vert  text.frag  text.vert  textlabel.frag  textlabel.vert
